--- a/mydevjourney/hugo.yaml
+++ b/mydevjourney/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://mydevjourney.github.io/
+baseURL: https://mydevjourney/
 languageCode: 'fr'
 title: <MyDevJourney/>
 subTitle: ⛵ towards CDA
