--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "mydevjourney/themes/PaperMod"]
 	path = mydevjourney/themes/PaperMod
 	url = https://github.com/adityatelange/hugo-PaperMod.git
+[submodule "mydevjourney/public"]
+	path = mydevjourney/public
+	url = git@github.com:sdp971/mydevjourney.github.io.git
+	branch = main
