--- a/mydevjourney/hugo.yaml
+++ b/mydevjourney/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://mydevjourney/
+baseURL: https://mydevjourneyblog.netlify.app/
 languageCode: 'fr'
 title: <MyDevJourney/>
 subTitle: ⛵ towards CDA
